Grubby : Quick and dirty CRUD operations
http://grubbycrud.com/

Version: @version@
Date: @date@

Copyright (c) @year@ Christopher Johnson
Licensed under the MIT license (see LICENSE file).
==================================================

Changes made to Grubby since the last minor release.

BUG FIXES

$table->read(null)  // throws the wrong error
// this no longer throws an error, but resolves to empty set
