@@ -47,18 +47,22 @@ class GrubbyMDB2 extends GrubbyDatabase {
     public function execute($sql) {
         if (Grubby::$debug) {
             Grubby::debugMessage('Executing: '.$sql);
-            $start = microtime(true);
         }
+        
+        $start = microtime(true);
         
         $connection = $this->getConnection();
         $result = $connection->exec($sql);
+        
+        $time = microtime(true) - $start;
+        $this->time += $time;
+        Grubby::$time += $time;
         
         if (Grubby::$debug) {
             if ($result instanceof MDB2_Error) {
                 Grubby::debugMessage('Error: '.$result->getMessage());
             }
-            $end = microtime(true);
-            Grubby::debugMessage('Time: '.number_format($end-$start, 4)." secs");
+            Grubby::debugMessage('Time: '.number_format($time, 4)." secs");
         }
         
         if ($result instanceof MDB2_Error) {
@@ -76,18 +80,22 @@ class GrubbyMDB2 extends GrubbyDatabase {
     public function query($sql) {
         if (Grubby::$debug) {
             Grubby::debugMessage('Querying: '.$sql);
-            $start = microtime(true);
         }
+        
+        $start = microtime(true);
         
         $connection = $this->getConnection();
         $result = $connection->query($sql);
+        
+        $time = microtime(true) - $start;
+        $this->time += $time;
+        Grubby::$time += $time;
         
         if (Grubby::$debug) {
             if ($result instanceof MDB2_Error) {
                 Grubby::debugMessage('Error: '.$result->getMessage());
             }
-            $end = microtime(true);
-            Grubby::debugMessage('Time: '.number_format($end-$start, 4)." secs");
+            Grubby::debugMessage('Time: '.number_format($time, 4)." secs");
         }
         
         if ($result instanceof MDB2_Error) {
